test: add parameterized tests for points calculation #42